Style changes & added DOM elements
- Added colour and background changes
- Small animations added to vs player & vs computer option buttons
- Rock, paper, scissors buttons added after vs player click
- DOM elements added inside app.js for future coding.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,31 @@
             <div class="title">
                 Rock, Paper, Scissors!
             </div>
+            <div class="portfolio-link">
+                <a href="">Back to Portfolio!</a>
+            </div>
         </header>
+        <div class="game-container">
+            <div class="vs-options">
+                <button id="vsPlayer">vs player!</button>
+                <button id="vsComp">vs computer!</button>
+            </div>
+            <div class="button-container">
+                <button id="rockBtn" style="display: none">Rock</button>
+                <button id="scissBtn" style="display: none">Paper</button>
+                <button id="paperBtn" style="display: none">Scissors</button>
+            </div>
+            <div class="score-announcement">
+                <div class="announcement"></div>
+                <div class="score">
+                    <div class="player-score">Player Score: 0</div>
+                    <div class="computer-score">Computer Score: 0</div>
+                </div>
+            </div>
+            <div class="reset-button">
+                <button id="resetBtn">Reset</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
